# MRTalk

./: .env.example  .gitignore  GPTSoVITS.ipynb  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md  WEBXR_MENU_FINAL_SUMMARY.md  mise.toml  package-lock.json  package.json  vite.config.ts
.roo/: mcp.json
ai-assistant/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  script.py  test.py
ai-assistant/.roo/: mcp.json
ai-assistant/prisma/: schema.prisma
ai-assistant/src/: main.py  schema.py  setup.py  tts.py
app/: auth.server.ts  root.tsx
app/components/card/: CharacterCard.tsx  FeatureCard.tsx
app/components/container/: AddCharacterContainer.tsx  CharacterListContainer.tsx  HomeContainer.tsx  ProfileContainer.tsx  SetupSceneContainer.tsx  TalkSceneContainer.tsx
app/components/container/character/: AddCharacterContainer.tsx  CharacterDetailsContainer.tsx  EditCharacterContainer.tsx
app/components/layout/: main.tsx
app/components/list/: CharacterList.tsx
app/components/ui/: header.tsx  textarea.tsx
app/components/xr/: SettingsPanel.tsx  TextBox.tsx  VRM.tsx  WindowBox.md  WindowBox.tsx  WindowBoxExamples.tsx  XRInputHandler.tsx  XRMeshes.tsx
app/components/xr/menu/: CharacterInfoPanel.tsx  MenuController.tsx  MenuNavigator.tsx  XRMenuSystem.tsx
app/lib/LangChain/: ConversationManager.ts
app/lib/api/character/: index.ts  schema.ts
app/lib/api/favorite/: index.ts  schema.ts
app/lib/api/memory/: index.ts
app/lib/api/storage/: index.ts
app/lib/api/user/: index.ts
app/lib/api/voice/: index.ts  register.ts
app/lib/auth/: google.ts  session.ts
app/lib/llm/: Chat.ts  schema.ts
app/lib/xr/core/: ErrorHandler.ts  MemoryManager.ts
app/lib/xr/hands/: GestureRecognizer.ts  HandTrackingManager.ts
app/lib/xr/hands/types/: HandTypes.ts
app/lib/xr/hooks/: useXRPerformance.ts
app/lib/xr/interaction/: InteractionManager.ts  RaycastingManager.ts
app/lib/xr/navigation/: NavigationManager.ts  setupNavMeshAndCrowd.ts
app/lib/xr/vrm/: AnimationManager.ts  MovementManager.ts  VRMLoader.ts  VRMMenuIntegration.ts  loadVRM.ts
app/routes/: _index.tsx  api.auth.$.ts  api.character.tsx  api.chat.$id.tsx  api.chat.tsx  api.favorite.tsx  api.memory.reset.tsx  character.$id.tsx  character.add.tsx  character.edit.$id.tsx  login.tsx  setup.tsx  talk.$id.tsx  user.$id.tsx
app/utils/: getParams.ts  getRandomInt.ts
app/utils/zod/: getErrorMessages.ts
docs/: README_WEBXR_MENU.md  webxr-menu-system-design.md  webxr-menu-usage-guide.md
prisma/: schema.prisma
prisma/migrations/20250306035347_init/: migration.sql
prisma/migrations/20250306042529_use_betterauth/: migration.sql
prisma/migrations/20250306081428_add_character_favorite/: migration.sql
prisma/migrations/20250306081525_add_model_url/: migration.sql
prisma/migrations/20250310022319_add_createdat_updatedat/: migration.sql
prisma/migrations/20250424081648_init/: migration.sql
prisma/migrations/20250424081934_add_is_public/: migration.sql
prisma/migrations/20250424083126_add_default/: migration.sql
prisma/migrations/20250426030359_add_voice/: migration.sql
prisma/migrations/20250426031830_fix_relation/: migration.sql
prisma/migrations/20250426064826_remove_store/: migration.sql
prisma/migrations/20250426094948_fix_name/: migration.sql
public/anim/vrma/: idle.vrma  looking.vrma  sit_anim.vrma  sleep.vrma  stretch.vrma  thinking.vrma  walk.vrma
public/fonts/keifont/: keifont.json
