[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "akazdayo", email = "82073147+akazdayo@users.noreply.github.com" },
    { name = "marukun712", email = "marukun530@gmail.com" },
]
dependencies = [
    "langchain>=0.3.20",
    "langmem>=0.0.15",
    "asyncio>=3.4.3",
    "langgraph>=0.3.5",
    "fastapi>=0.115.11",
    "prisma>=0.15.0",
    "numpy>=2.2.3",
    "langgraph-checkpoint>=2.0.18",
    "langgraph-checkpoint-postgres>=2.0.16",
]
readme = "README.md"
requires-python = ">=3.11"

[tool.rye.scripts]
dev = { cmd = "uvicorn main:app --reload", env-file = ".env" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.9.10"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_assistant"]
