[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "akazdayo", email = "82073147+akazdayo@users.noreply.github.com" },
    { name = "marukun712", email = "marukun530@gmail.com" },
]
dependencies = [
    "langchain>=0.3.20",
    "langmem>=0.0.15",
    "asyncio>=3.4.3",
    "langgraph>=0.3.5",
    "fastapi>=0.115.11",
    "prisma>=0.15.0",
    "numpy==1.26.4",
    "langgraph-checkpoint>=2.0.18",
    "langgraph-checkpoint-postgres>=2.0.16",
    "uvicorn>=0.34.0",
    "psycopg[binary,pool]>=3.2.5",
    "python-multipart>=0.0.20",
    "speechrecognition>=3.14.1",
    "pydub>=0.25.1",
    "langchain-google-genai>=2.1.1",
    "langchain-google-vertexai>=2.0.16",
    "torch==2.6.0+cu126",
    "torchvision==0.21.0+cu126",
    "torchaudio==2.6.0",
    "style-bert-vits2>=2.5.0",
    "scipy>=1.15.2",
    "setuptools>=78.0.2",
]

readme = "README.md"
requires-python = ">=3.11.1"

[tool.rye.scripts]
dev = { cmd = "uvicorn src.main:app --reload", env-file = ".env" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.9.10"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ai_assistant"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/test/torch/"
type = "find-links"

[[tool.rye.sources]]
name = "torchvision"
url = "https://download.pytorch.org/whl/test/torchvision/"
type = "find-links"

